--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/themes": "^3.0.2",
     "firebase": "^10.7.1",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
